# Map-Matching

./: Bounding_box.cpp  CMakeLists.txt  HMM.cpp  HMM.h  Lola_trying_sort_of.cpp  README.md  convert_to_dimac  convert_to_dimac.cpp  dijkstras.cpp  disc_frechet.cpp  disc_frechet.h  disc_frechet_grid.cpp  disc_frechet_grid.h  disc_frechet_v2.cpp  disc_frechet_v2.h  dist_frechet.cpp  freespace_dijkstra.cpp  freespace_shortest_path.h  gnuplot_example.txt  graph.c  graph.cpp  graph.h  graph_c.h  graph_for_hist.h  graph_grid.cpp  graph_grid.h  graph_grid_starting_node.cpp  graph_grid_starting_node.h  graph_grid_starting_node_grid.cpp  graph_grid_starting_node_grid.h  graph_scc_lola.h  graph_scc_lola_v3.h  graph_subsampling.cpp  graph_subsampling.h  graph_test_lola.cpp  main.cpp  main_DFMP.cpp  main_HMM.cpp  main_frechet.cpp  main_grid.cpp  (+20 more)
DF_sol/: disc_frechet.cpp  disc_frechet.h  disc_frechet_grid.cpp  disc_frechet_grid.h  disc_frechet_v2.cpp  disc_frechet_weak.cpp  freespace_dijkstra.cpp  freespace_shortest_path.h  main_weak_Frechet.cpp  starting_node_look_up.h
HMM/: HMM.cpp  HMM.h  main_HMM.cpp
Stats/: graph_for_hist.cpp  graph_for_hist.h
grid/: graph_grid.cpp  graph_grid.h  graph_grid_starting_node.cpp  graph_grid_starting_node.h
hub_labels/: hub_label  hub_labels.cpp  hub_labels.h
matching_using_sp/interleaved_algorithm/: interleaved.cpp  interleaved.h  interleaved_main.cpp  interleaved_main2.cpp
matching_using_sp/kskip_cover_matching/: algorithm.cpp  main.cpp  skip_algorithm.h
matching_using_sp/naive_algorithm/: naive.cpp  naive.h  naive_main.cpp
matching_using_sp/shared/: shared.cpp  shared.h
preprocessing/: graph.cpp  graph.h  graph_subsampling.cpp  graph_subsampling.h  k_skip_cover.cpp  k_skip_cover.h  main_preprocessing.cpp  scale_projection.cpp
sample_maze_tool/: maze_tool_processed.txt  maze_tool_processed_dimac.txt  maze_trajactory.txt  simple_test.txt
tracjectories/: trajectory.h
trajectories/: traj_starting_node.cpp  trajectory.cpp  trajectory.h  trajectory_split.cpp  trajectory_split.h
var3/interleaved_algorithm/: interleaved.cpp  interleaved.h  interleaved_main.cpp
var3/kskip_cover_matching/: algorithm.cpp  skip_algorithm.h
var3/naive_algorithm/: naive.cpp  naive_main.cpp
var3/shared/: shared.cpp
